--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,4 +1,7 @@
 
-<h1>Example App: Home</h1>
-<div id="root"></div>
+<script type="text/javascript">
+  window.initialData = {{{ initialData }}} ;
+</script>
+
+<div id="root">{{{ initialMarkup }}}</div>
 <script src="/bundle.js"></script>
